# ComfyUI

./: .gitignore  README.md  SECURITY.md  comfyui_version.py  execution.py  folder_paths.py  main.py  nodes.py  openapi.yaml  pyproject.toml  requirements.txt  server.py
app/: custom_node_manager.py  frontend_management.py  logger.py  model_manager.py  user_manager.py
blueprints/: Audio Generation (Stable Audio 3 Medium Base).json  Audio Generation (Stable Audio 3 Medium).json  Canny to Image (Z-Image-Turbo).json  Canny to Video (LTX 2.0).json  Character Replacement (SCAIL-2 Base).json  Character Replacement (SCAIL-2 Extend).json  ControlNet (Z-Image-Turbo).json  Depth to Image (Z-Image-Turbo).json  Depth to Video (ltx 2.0).json  First-Last-Frame to Video (LTX-2.3).json  First-Last-Frame to Video.json  Geometry Estimation (MoGe).json  Image Captioning (gemini).json  Image Depth Estimation (Depth Anything 3).json  Image Depth Estimation (Lotus Depth).json  Image Depth Estimation (MoGe).json  Image Edit (Bernini-R).json  Image Face Detection (Mediapipe).json  Image Segmentation (SAM3).json  Image Upscale(Z-image-Turbo).json  Image to Gaussian Splat (TripoSplat).json  Image to Pose Map (SDPose Multi-Person).json  Image to Pose Map (SDPose-OOD).json  Merge Videos.json  Pose to Image (Z-Image-Turbo).json  Pose to Video (LTX 2.0).json  Prompt Enhance.json  Remove Background (BiRefNet).json  Select Per-Line Text by Index.json  Split Image Grid to Tiles.json  Text to Image (Anima Base 1.0).json  Text to Image (Anima).json  Text to Image (Ideogram v4).json  Video Captioning (Gemini).json  Video Depth Estimation (Depth Anything 3).json  Video Depth Estimation (MoGe).json  Video Edit (Bernini-R).json  Video Face Detection (Mediapipe).json  Video Inpaint (VOID).json  Video Inpainting (Wan2.1 VACE).json  (+3 more)
comfy/: bg_removal_model.py  cli_args.py  clip_vision.py  controlnet.py  float.py  latent_formats.py  lora.py  memory_management.py  model_base.py  model_detection.py  model_management.py  model_patcher.py  model_prefetch.py  multigpu.py  ops.py  patcher_extension.py  pinned_memory.py  sampler_helpers.py  samplers.py  sd.py  supported_models.py  utils.py
comfy_api/: feature_flags.py
comfy_api_nodes/: nodes_anthropic.py  nodes_beeble.py  nodes_bfl.py  nodes_bria.py  nodes_bytedance.py  nodes_bytedance_llm.py  nodes_elevenlabs.py  nodes_gemini.py  nodes_grok.py  nodes_hitpaw.py  nodes_hunyuan3d.py  nodes_ideogram.py  nodes_kling.py  nodes_krea.py  nodes_ltxv.py  nodes_luma.py  nodes_magnific.py  nodes_meshy.py  nodes_minimax.py  nodes_openai.py  nodes_openrouter.py  nodes_pixverse.py  nodes_quiver.py  nodes_recraft.py  nodes_reve.py  nodes_rodin.py  nodes_runway.py  nodes_sonilo.py  nodes_sora.py  nodes_stability.py  nodes_topaz.py  nodes_tripo.py  nodes_veo2.py  nodes_vidu.py  nodes_wan.py  nodes_wavespeed.py
comfy_execution/: asset_enrichment.py  graph.py  jobs.py  progress.py  type_resolver.py  validation.py
comfy_extras/: color_util.py  nodes_ace.py  nodes_advanced_samplers.py  nodes_align_your_steps.py  nodes_apg.py  nodes_ar_video.py  (+86 more)
(+119 files in other folders)
